tests/cases/errors/compile_var_no_semicolon.lox
// expect compile error: Expect ';' after variable declaration
var x = 1
